nuevos campos para ingreso de pacientes

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:working": "node --experimental-vm-modules node_modules/jest/bin/jest.js --testPathPattern=\"(mock.test.js|rutas.simple.test.js|funciones.test.js|integration/cita.simple.test.js)\"",
     "test:watch": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage"
+    "test:coverage": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
+    "migrate:pacientes": "node database/run-migration.js",
+    "init:db": "node database/init-db.js"
   },
   "keywords": [],
   "author": "",
