--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.17",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0"
   },
@@ -18,10 +23,14 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.31",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
