--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.15.6",
+    "sweetalert2": "^11.20.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
