--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.15.6",
+    "recharts": "^2.15.3",
     "sweetalert2": "^11.20.0"
   },
   "devDependencies": {
