--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "agenda_medica",
   "version": "1.0.0",
   "description": "Sistema de agendamiento médico con arquitectura MVC",
-  "main": "src/app.js",
+  "main": "backend/index.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "start": "node backend/index.js",
+    "dev": "cd backend && npm run dev",
+    "test": "cd backend && npm test",
+    "test:watch": "cd backend && npm run test:watch",
+    "test:coverage": "cd backend && npm run test:coverage",
+    "frontend": "cd frontend && npm start",
+    "frontend:dev": "cd frontend && npm run dev",
+    "frontend:build": "cd frontend && npm run build"
   },
   "keywords": [
     "agendamiento",
@@ -23,19 +26,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.15.6",
-    "recharts": "^2.15.3",
-    "sweetalert2": "^11.20.0"
-  },
-  "devDependencies": {
-    "jest": "^29.7.0",
-    "nodemon": "^3.0.2",
-    "supertest": "^7.1.0"
+    "chalk": "^5.4.1",
+    "node-fetch": "^3.3.2"
   }
 }
